# astronomy-proj

./: .gitconfig  .gitignore  Dockerfile  README.md  comment.txt  pyproject.toml
.github/workflows/: black.yaml  publish-action.yaml  style-and-format.yaml  testing.yaml
astronomy_proj/: solar.py  test_solar.py
