[tool.poetry]
name = "astronomy-proj"
version = "0.1.0"
description = ""
authors = ["leblanck <kyle@leblanc.sh>"]
readme = "README.md"
packages = [{include = "astronomy_proj"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
