[tool.poetry]
name = "astronomy-proj"
version = "0.1.0"
description = ""
authors = ["leblanck <kyle@leblanc.sh>"]
readme = "README.md"
packages = [{include = "astronomy_proj"}]

[tool.poetry.dependencies]
python = "^3.7"
black = "^22.8.0"
DateTime = "^4.7"
requests = "^2.28.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
